--- a/editor/templates/editor_view.html
+++ b/editor/templates/editor_view.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% load static %}
     <script src="https://cdn.ckeditor.com/ckeditor5/31.0.0/classic/ckeditor.js"></script>
-    <link rel="stylesheet" href="{% static 'css/main_view.css' %}">
+    <link rel="stylesheet" href="{% static 'css/editor_view.css' %}">
 
     <title>ReportOwl</title>
 </head>
@@ -37,28 +37,49 @@
         </nav>
     </header>
     <main>
-        <h1>{{document.title}}</h1><br>
-        {% if chapters %}
-        <ul class="list-group">
-            {% for chapter, value in sections.items %}
-            
-            <li class="list-group-item" aria-current="true">
-                <a href="{% url 'chapter_view' document.document_id chapter.slug %}" target="_blank">{{ chapter.title }}</a>
+        <div id="content-area">
+            <h1>{{document.title}}</h1><br>
+            {% if chapters %}
+            <ul class="list-group">
+                {% for chapter, value in sections.items %}
                 
-                <ul class="list-group">
-                    {% for section in value %}
-                    <li class="list-group-item"><a href="{% url 'section_view' document.document_id chapter.slug section.slug %}"
-                            target="_blank">{{ section.title }}</a></li>
-                    {% endfor %}
-                </ul>
-                <a class="btn btn-primary open_new" href="{% url 'new_section_view' document.document_id chapter.slug %}" target="_blank">Add section</a>
-            </li>
-            
-            {% endfor %}
+                <li class="list-group-item" aria-current="true">
+                    <a href="{% url 'chapter_view' document.document_id chapter.slug %}" target="_blank">{{ chapter.title }}</a>
+                    
+                    <ul class="list-group">
+                        {% for section in value %}
+                        <li class="list-group-item"><a href="{% url 'section_view' document.document_id chapter.slug section.slug %}"
+                                target="_blank">{{ section.title }}</a></li>
+                        {% endfor %}
+                    </ul>
+                    <a class="btn btn-primary open_new my-2" href="{% url 'new_section_view' document.document_id chapter.slug %}" target="_blank">Add section</a>
+                </li>
+                
+                {% endfor %}
+            </ul>
             {% endif %}
-        </ul>
-        <a class="btn btn-primary" href="{% url 'new_chapter_view' document.document_id %}" target="_blank">Add chapter</a>
-        
+            <a class="btn btn-primary my-2" href="{% url 'new_chapter_view' document.document_id %}" target="_blank">Add chapter</a>
+        </div>
+
+
+        {% if chapters %}
+        <div class="preview-container border">
+            {% for chapter, value in sections.items %}
+
+            <li class="list-group-item border-0" aria-current="true">
+                <h1 class="text-center">{{chapter.title}}</h1>
+                {{chapter.description | safe}}
+                    {% for section in value %}
+                    <li class="list-group-item border-0">
+                        <h2>{{section.title}}</h2>
+                        {{section.content | safe}}
+                    </li>
+                    {% endfor %}
+            </li>
+
+            {% endfor %}
+        </div>
+        {% endif %}
     </main>
 
 </body>
